--- a/nails.html
+++ b/nails.html
@@ -84,8 +84,8 @@
         </div>
         <div class="hero-visual" aria-hidden="true">
           <div class="hero-collage">
-            <img src="assets/images/Nails/Blue%20Extensions.jpg" srcset="assets/images/Nails/Blue%20Extensions.jpg 480w, assets/images/Nails/Blue%20Extensions.jpg 960w, assets/images/Nails/Blue%20Extensions.jpg 1440w" sizes="(max-width: 760px) 46vw, (max-width: 1080px) 50vw, 32vw" alt="Nail set - blue extensions" loading="eager" decoding="async" fetchpriority="high" width="900" height="1100">
-            <img src="assets/images/Nails/Pink%20french%20with%20bow.jpg" srcset="assets/images/Nails/Pink%20french%20with%20bow.jpg 480w, assets/images/Nails/Pink%20french%20with%20bow.jpg 960w, assets/images/Nails/Pink%20french%20with%20bow.jpg 1440w" sizes="(max-width: 760px) 46vw, (max-width: 1080px) 50vw, 32vw" alt="Nail set - pink French bow design" loading="eager" decoding="async" fetchpriority="high" width="900" height="1100">
+            <img src="assets/images/Nails/Blue%20Extensions.jpg" srcset="assets/images/Nails/Blue%20Extensions.jpg 480w, assets/images/Nails/Blue%20Extensions.jpg 960w, assets/images/Nails/Blue%20Extensions.jpg 1440w" sizes="(max-width: 420px) 92vw, (max-width: 760px) 46vw, (max-width: 1080px) 50vw, 32vw" alt="Nail set - blue extensions" loading="eager" decoding="async" fetchpriority="high" width="900" height="1100">
+            <img src="assets/images/Nails/Pink%20french%20with%20bow.jpg" srcset="assets/images/Nails/Pink%20french%20with%20bow.jpg 480w, assets/images/Nails/Pink%20french%20with%20bow.jpg 960w, assets/images/Nails/Pink%20french%20with%20bow.jpg 1440w" sizes="(max-width: 420px) 92vw, (max-width: 760px) 46vw, (max-width: 1080px) 50vw, 32vw" alt="Nail set - pink French bow design" loading="lazy" decoding="async" width="900" height="1100">
           </div>
         </div>
       </div>
@@ -303,7 +303,7 @@
         <a data-social-link="instagram" href="https://www.instagram.com/elysium_by_georgierose/">Instagram</a>
         <a data-social-link="facebook" href="https://www.facebook.com/profile.php?id=61571925904476">Facebook</a>
         <a data-social-link="tiktok" href="https://www.tiktok.com/@elysium_by_georgierose?is_from_webapp=1&amp;sender_device=pc">TikTok</a>
-        <span data-contact-email-wrap>Email: <a data-contact-email-link href="mailto:Elysium.pj@gmail.com">Elysium.pj@gmail.com</a></span>
+        <span data-contact-email-wrap>Email: <a data-contact-email-link href="mailto:Elysium.pj@gmail.com?subject=Enquiry%20from%20website&amp;body=Hi%20Georgie%2C%0A%0AI%27m%20getting%20in%20touch%20about...">Elysium.pj@gmail.com</a></span>
         <span data-contact-phone-wrap>Phone: <a data-contact-phone-link href="tel:+447361497192">07361 497192</a></span>
       </div>
     </div>
