--- a/policies/cookies.html
+++ b/policies/cookies.html
@@ -88,7 +88,7 @@
         <article class="card">
           <h2>Questions</h2>
           <p class="muted">If you have questions about cookie usage, please contact us by email.</p>
-          <p><a href="mailto:Elysium.pj@gmail.com">Elysium.pj@gmail.com</a></p>
+          <p><a href="mailto:Elysium.pj@gmail.com?subject=Enquiry%20from%20website&amp;body=Hi%20Georgie%2C%0A%0AI%27m%20getting%20in%20touch%20about...">Elysium.pj@gmail.com</a></p>
         </article>
       </div>
     </section>
@@ -127,7 +127,7 @@
         <a data-social-link="instagram" href="#">Instagram</a>
         <a data-social-link="facebook" href="#">Facebook</a>
         <a data-social-link="tiktok" href="#">TikTok</a>
-        <span data-contact-email-wrap>Email: <a data-contact-email-link href="mailto:Elysium.pj@gmail.com">Elysium.pj@gmail.com</a></span>
+        <span data-contact-email-wrap>Email: <a data-contact-email-link href="mailto:Elysium.pj@gmail.com?subject=Enquiry%20from%20website&amp;body=Hi%20Georgie%2C%0A%0AI%27m%20getting%20in%20touch%20about...">Elysium.pj@gmail.com</a></span>
         <span data-contact-phone-wrap>Phone: <a data-contact-phone-link href="tel:+447361497192">07361 497192</a></span>
       </div>
     </div>
