--- a/accessibility.html
+++ b/accessibility.html
@@ -97,7 +97,7 @@
         <h2>Need help or spotted an issue?</h2>
         <p class="muted">If any part of this website is difficult to use, or if you need content in an alternative format, please get in touch and support will be provided as quickly as possible.</p>
         <p>
-          <a href="mailto:Elysium.pj@gmail.com">Elysium.pj@gmail.com</a><br>
+          <a href="mailto:Elysium.pj@gmail.com?subject=Enquiry%20from%20website&amp;body=Hi%20Georgie%2C%0A%0AI%27m%20getting%20in%20touch%20about...">Elysium.pj@gmail.com</a><br>
           <a href="tel:+447361497192">07361 497192</a>
         </p>
       </div>
@@ -137,7 +137,7 @@
         <a data-social-link="instagram" href="https://www.instagram.com/elysium_by_georgierose/">Instagram</a>
         <a data-social-link="facebook" href="https://www.facebook.com/profile.php?id=61571925904476">Facebook</a>
         <a data-social-link="tiktok" href="https://www.tiktok.com/@elysium_by_georgierose?is_from_webapp=1&amp;sender_device=pc">TikTok</a>
-        <span data-contact-email-wrap>Email: <a data-contact-email-link href="mailto:Elysium.pj@gmail.com">Elysium.pj@gmail.com</a></span>
+        <span data-contact-email-wrap>Email: <a data-contact-email-link href="mailto:Elysium.pj@gmail.com?subject=Enquiry%20from%20website&amp;body=Hi%20Georgie%2C%0A%0AI%27m%20getting%20in%20touch%20about...">Elysium.pj@gmail.com</a></span>
         <span data-contact-phone-wrap>Phone: <a data-contact-phone-link href="tel:+447361497192">07361 497192</a></span>
       </div>
     </div>
