feat: update canonical URLs and metadata across multiple pages for domain migration

--- a/accessibility.html
+++ b/accessibility.html
@@ -5,16 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Accessibility | Elysium By Georgie Rose</title>
   <meta name="description" content="Accessibility statement for Elysium By Georgie Rose, including keyboard support, known limitations, and how to request help or report issues.">
-  <link rel="canonical" href="https://josephoakes12-afk.github.io/ElysiumbyGeorgieRose/accessibility.html">
+  <link rel="canonical" href="https://elysiumbygeorgierose.co.uk/accessibility.html">
   <meta property="og:title" content="Accessibility | Elysium By Georgie Rose">
   <meta property="og:description" content="Accessibility statement for Elysium By Georgie Rose, including keyboard support, known limitations, and how to request help or report issues.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://josephoakes12-afk.github.io/ElysiumbyGeorgieRose/accessibility.html">
-  <meta property="og:image" content="https://josephoakes12-afk.github.io/ElysiumbyGeorgieRose/assets/images/curlogo.png">
+  <meta property="og:url" content="https://elysiumbygeorgierose.co.uk/accessibility.html">
+  <meta property="og:image" content="https://elysiumbygeorgierose.co.uk/assets/images/curlogo.png">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Accessibility | Elysium By Georgie Rose">
   <meta name="twitter:description" content="Accessibility statement for Elysium By Georgie Rose, including keyboard support, known limitations, and how to request help or report issues.">
-  <meta name="twitter:image" content="https://josephoakes12-afk.github.io/ElysiumbyGeorgieRose/assets/images/curlogo.png">
+  <meta name="twitter:image" content="https://elysiumbygeorgierose.co.uk/assets/images/curlogo.png">
   <link rel="icon" type="image/png" href="assets/images/curlogo.png">
   <link rel="shortcut icon" type="image/png" href="assets/images/curlogo.png">
   <link rel="apple-touch-icon" href="assets/images/curlogo.png">
