--- a/faq.html
+++ b/faq.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>FAQs | Elysium By Georgie Rose</title>
   <meta name="description" content="Frequently asked questions about nails, permanent jewellery, booking, and aftercare.">
+  <link rel="canonical" href="https://elysiumbygeorgierose.co.uk/faq.html">
   <meta property="og:title" content="FAQs | Elysium By Georgie Rose">
   <meta property="og:description" content="Quick answers before booking nails or permanent jewellery services.">
   <meta property="og:type" content="website">
