--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Elysium By Georgie Rose | Nails and Permanent Jewellery</title>
   <meta name="description" content="Luxury BIAB, gel polish, gel extensions, and permanent welded jewellery in Cheadle. Explore services, recent work, FAQs, and booking details.">
-  <link rel="canonical" href="https://josephoakes12-afk.github.io/ElysiumbyGeorgieRose/">
+  <link rel="canonical" href="https://elysiumbygeorgierose.co.uk/">
   <meta property="og:title" content="Elysium By Georgie Rose | Nails and Permanent Jewellery">
   <meta property="og:description" content="Luxury BIAB, gel polish, gel extensions, and permanent welded jewellery in Cheadle. Explore services, recent work, FAQs, and booking details.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://josephoakes12-afk.github.io/ElysiumbyGeorgieRose/">
-  <meta property="og:image" content="https://josephoakes12-afk.github.io/ElysiumbyGeorgieRose/assets/images/curlogo.png">
+  <meta property="og:url" content="https://elysiumbygeorgierose.co.uk/">
+  <meta property="og:image" content="https://elysiumbygeorgierose.co.uk/assets/images/curlogo.png">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Elysium By Georgie Rose | Nails and Permanent Jewellery">
   <meta name="twitter:description" content="Luxury BIAB, gel polish, gel extensions, and permanent welded jewellery in Cheadle. Explore services, recent work, FAQs, and booking details.">
-  <meta name="twitter:image" content="https://josephoakes12-afk.github.io/ElysiumbyGeorgieRose/assets/images/curlogo.png">
+  <meta name="twitter:image" content="https://elysiumbygeorgierose.co.uk/assets/images/curlogo.png">
   <link rel="icon" type="image/png" href="assets/images/curlogo.png">
   <link rel="shortcut icon" type="image/png" href="assets/images/curlogo.png">
   <link rel="apple-touch-icon" href="assets/images/curlogo.png">
