--- a/nails.html
+++ b/nails.html
@@ -5,16 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Nails | Elysium By Georgie Rose</title>
   <meta name="description" content="Book BIAB, gel polish, and gel extensions with Elysium By Georgie Rose. View aftercare guidance, recent nail sets, timings, and booking options.">
-  <link rel="canonical" href="https://josephoakes12-afk.github.io/ElysiumbyGeorgieRose/nails.html">
+  <link rel="canonical" href="https://elysiumbygeorgierose.co.uk/nails.html">
   <meta property="og:title" content="Nails | Elysium By Georgie Rose">
   <meta property="og:description" content="Book BIAB, gel polish, and gel extensions with Elysium By Georgie Rose. View aftercare guidance, recent nail sets, timings, and booking options.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://josephoakes12-afk.github.io/ElysiumbyGeorgieRose/nails.html">
-  <meta property="og:image" content="https://josephoakes12-afk.github.io/ElysiumbyGeorgieRose/assets/images/curlogo.png">
+  <meta property="og:url" content="https://elysiumbygeorgierose.co.uk/nails.html">
+  <meta property="og:image" content="https://elysiumbygeorgierose.co.uk/assets/images/curlogo.png">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Nails | Elysium By Georgie Rose">
   <meta name="twitter:description" content="Book BIAB, gel polish, and gel extensions with Elysium By Georgie Rose. View aftercare guidance, recent nail sets, timings, and booking options.">
-  <meta name="twitter:image" content="https://josephoakes12-afk.github.io/ElysiumbyGeorgieRose/assets/images/curlogo.png">
+  <meta name="twitter:image" content="https://elysiumbygeorgierose.co.uk/assets/images/curlogo.png">
   <link rel="icon" type="image/png" href="assets/images/curlogo.png">
   <link rel="shortcut icon" type="image/png" href="assets/images/curlogo.png">
   <link rel="apple-touch-icon" href="assets/images/curlogo.png">
