--- a/policies/cookies.html
+++ b/policies/cookies.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Cookie Policy | Elysium By Georgie Rose</title>
   <meta name="description" content="Cookie policy for Elysium By Georgie Rose website visitors.">
+  <link rel="canonical" href="https://elysiumbygeorgierose.co.uk/policies/cookies.html">
   <meta property="og:title" content="Cookie Policy | Elysium By Georgie Rose">
   <meta property="og:description" content="Details of cookie usage for embeds and site functionality.">
   <meta property="og:type" content="website">
