--- a/policies/privacy.html
+++ b/policies/privacy.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Privacy Policy | Elysium By Georgie Rose</title>
   <meta name="description" content="How Elysium By Georgie Rose handles enquiry and booking data.">
+  <link rel="canonical" href="https://elysiumbygeorgierose.co.uk/policies/privacy.html">
   <meta property="og:title" content="Privacy Policy | Elysium By Georgie Rose">
   <meta property="og:description" content="Overview of data collection, use and rights.">
   <meta property="og:type" content="website">
