--- a/popups.html
+++ b/popups.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Pop-ups and Events | Elysium By Georgie Rose</title>
   <meta name="description" content="Pop-up and event bookings for permanent jewellery with Elysium By Georgie Rose.">
+  <link rel="canonical" href="https://elysiumbygeorgierose.co.uk/popups.html">
   <meta property="og:title" content="Pop-ups and Events | Elysium By Georgie Rose">
   <meta property="og:description" content="Bring a premium permanent jewellery experience to your venue or event.">
   <meta property="og:type" content="website">
