--- a/services.html
+++ b/services.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Services Overview | Elysium By Georgie Rose</title>
   <meta name="description" content="Overview of nails and permanent jewellery services at Elysium By Georgie Rose.">
+  <link rel="canonical" href="https://elysiumbygeorgierose.co.uk/services.html">
   <meta property="og:title" content="Services Overview | Elysium By Georgie Rose">
   <meta property="og:description" content="Explore BIAB, gel services, and permanent jewellery options.">
   <meta property="og:type" content="website">
