--- a/weddings.html
+++ b/weddings.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Weddings and Keepsakes | Elysium By Georgie Rose</title>
   <meta name="description" content="Wedding keepsake jewellery experiences by Elysium By Georgie Rose.">
+  <link rel="canonical" href="https://elysiumbygeorgierose.co.uk/weddings.html">
   <meta property="og:title" content="Weddings and Keepsakes | Elysium By Georgie Rose">
   <meta property="og:description" content="Premium welded jewellery keepsake moments for bridal parties and celebrations.">
   <meta property="og:type" content="website">
