--- a/contact.html
+++ b/contact.html
@@ -5,16 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Contact and Booking | Elysium By Georgie Rose</title>
   <meta name="description" content="Send a booking enquiry for nails, permanent jewellery, weddings, and pop-ups. Contact Elysium By Georgie Rose by form, Instagram, phone, or email.">
-  <link rel="canonical" href="https://josephoakes12-afk.github.io/ElysiumbyGeorgieRose/contact.html">
+  <link rel="canonical" href="https://elysiumbygeorgierose.co.uk/contact.html">
   <meta property="og:title" content="Contact and Booking | Elysium By Georgie Rose">
   <meta property="og:description" content="Send a booking enquiry for nails, permanent jewellery, weddings, and pop-ups. Contact Elysium By Georgie Rose by form, Instagram, phone, or email.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://josephoakes12-afk.github.io/ElysiumbyGeorgieRose/contact.html">
-  <meta property="og:image" content="https://josephoakes12-afk.github.io/ElysiumbyGeorgieRose/assets/images/curlogo.png">
+  <meta property="og:url" content="https://elysiumbygeorgierose.co.uk/contact.html">
+  <meta property="og:image" content="https://elysiumbygeorgierose.co.uk/assets/images/curlogo.png">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Contact and Booking | Elysium By Georgie Rose">
   <meta name="twitter:description" content="Send a booking enquiry for nails, permanent jewellery, weddings, and pop-ups. Contact Elysium By Georgie Rose by form, Instagram, phone, or email.">
-  <meta name="twitter:image" content="https://josephoakes12-afk.github.io/ElysiumbyGeorgieRose/assets/images/curlogo.png">
+  <meta name="twitter:image" content="https://elysiumbygeorgierose.co.uk/assets/images/curlogo.png">
   <link rel="icon" type="image/png" href="assets/images/curlogo.png">
   <link rel="shortcut icon" type="image/png" href="assets/images/curlogo.png">
   <link rel="apple-touch-icon" href="assets/images/curlogo.png">
