--- a/cookies.html
+++ b/cookies.html
@@ -5,16 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Cookies Policy | Elysium By Georgie Rose</title>
   <meta name="description" content="Learn how cookies and browser storage are used on the Elysium By Georgie Rose website, including social embeds and how to manage preferences.">
-  <link rel="canonical" href="https://josephoakes12-afk.github.io/ElysiumbyGeorgieRose/cookies.html">
+  <link rel="canonical" href="https://elysiumbygeorgierose.co.uk/cookies.html">
   <meta property="og:title" content="Cookies Policy | Elysium By Georgie Rose">
   <meta property="og:description" content="Learn how cookies and browser storage are used on the Elysium By Georgie Rose website, including social embeds and how to manage preferences.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://josephoakes12-afk.github.io/ElysiumbyGeorgieRose/cookies.html">
-  <meta property="og:image" content="https://josephoakes12-afk.github.io/ElysiumbyGeorgieRose/assets/images/curlogo.png">
+  <meta property="og:url" content="https://elysiumbygeorgierose.co.uk/cookies.html">
+  <meta property="og:image" content="https://elysiumbygeorgierose.co.uk/assets/images/curlogo.png">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Cookies Policy | Elysium By Georgie Rose">
   <meta name="twitter:description" content="Learn how cookies and browser storage are used on the Elysium By Georgie Rose website, including social embeds and how to manage preferences.">
-  <meta name="twitter:image" content="https://josephoakes12-afk.github.io/ElysiumbyGeorgieRose/assets/images/curlogo.png">
+  <meta name="twitter:image" content="https://elysiumbygeorgierose.co.uk/assets/images/curlogo.png">
   <link rel="icon" type="image/png" href="assets/images/curlogo.png">
   <link rel="shortcut icon" type="image/png" href="assets/images/curlogo.png">
   <link rel="apple-touch-icon" href="assets/images/curlogo.png">
