--- a/gallery.html
+++ b/gallery.html
@@ -5,16 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Gallery | Elysium By Georgie Rose</title>
   <meta name="description" content="Browse recent nail sets and permanent jewellery pieces from Elysium By Georgie Rose. Filter by service and load more portfolio images.">
-  <link rel="canonical" href="https://josephoakes12-afk.github.io/ElysiumbyGeorgieRose/gallery.html">
+  <link rel="canonical" href="https://elysiumbygeorgierose.co.uk/gallery.html">
   <meta property="og:title" content="Gallery | Elysium By Georgie Rose">
   <meta property="og:description" content="Browse recent nail sets and permanent jewellery pieces from Elysium By Georgie Rose. Filter by service and load more portfolio images.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://josephoakes12-afk.github.io/ElysiumbyGeorgieRose/gallery.html">
-  <meta property="og:image" content="https://josephoakes12-afk.github.io/ElysiumbyGeorgieRose/assets/images/curlogo.png">
+  <meta property="og:url" content="https://elysiumbygeorgierose.co.uk/gallery.html">
+  <meta property="og:image" content="https://elysiumbygeorgierose.co.uk/assets/images/curlogo.png">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Gallery | Elysium By Georgie Rose">
   <meta name="twitter:description" content="Browse recent nail sets and permanent jewellery pieces from Elysium By Georgie Rose. Filter by service and load more portfolio images.">
-  <meta name="twitter:image" content="https://josephoakes12-afk.github.io/ElysiumbyGeorgieRose/assets/images/curlogo.png">
+  <meta name="twitter:image" content="https://elysiumbygeorgierose.co.uk/assets/images/curlogo.png">
   <link rel="icon" type="image/png" href="assets/images/curlogo.png">
   <link rel="shortcut icon" type="image/png" href="assets/images/curlogo.png">
   <link rel="apple-touch-icon" href="assets/images/curlogo.png">
