--- a/policies/accessibility.html
+++ b/policies/accessibility.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Accessibility Statement | Elysium By Georgie Rose</title>
   <meta name="description" content="Accessibility statement for Elysium By Georgie Rose website.">
+  <link rel="canonical" href="https://elysiumbygeorgierose.co.uk/policies/accessibility.html">
   <meta property="og:title" content="Accessibility Statement | Elysium By Georgie Rose">
   <meta property="og:description" content="How accessibility is approached and how to report issues.">
   <meta property="og:type" content="website">
