--- a/privacy.html
+++ b/privacy.html
@@ -5,16 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Privacy Policy | Elysium By Georgie Rose</title>
   <meta name="description" content="Read how Elysium By Georgie Rose collects, uses, and stores enquiry and booking information, including third-party form and social platform processing.">
-  <link rel="canonical" href="https://josephoakes12-afk.github.io/ElysiumbyGeorgieRose/privacy.html">
+  <link rel="canonical" href="https://elysiumbygeorgierose.co.uk/privacy.html">
   <meta property="og:title" content="Privacy Policy | Elysium By Georgie Rose">
   <meta property="og:description" content="Read how Elysium By Georgie Rose collects, uses, and stores enquiry and booking information, including third-party form and social platform processing.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://josephoakes12-afk.github.io/ElysiumbyGeorgieRose/privacy.html">
-  <meta property="og:image" content="https://josephoakes12-afk.github.io/ElysiumbyGeorgieRose/assets/images/curlogo.png">
+  <meta property="og:url" content="https://elysiumbygeorgierose.co.uk/privacy.html">
+  <meta property="og:image" content="https://elysiumbygeorgierose.co.uk/assets/images/curlogo.png">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Privacy Policy | Elysium By Georgie Rose">
   <meta name="twitter:description" content="Read how Elysium By Georgie Rose collects, uses, and stores enquiry and booking information, including third-party form and social platform processing.">
-  <meta name="twitter:image" content="https://josephoakes12-afk.github.io/ElysiumbyGeorgieRose/assets/images/curlogo.png">
+  <meta name="twitter:image" content="https://elysiumbygeorgierose.co.uk/assets/images/curlogo.png">
   <link rel="icon" type="image/png" href="assets/images/curlogo.png">
   <link rel="shortcut icon" type="image/png" href="assets/images/curlogo.png">
   <link rel="apple-touch-icon" href="assets/images/curlogo.png">
