--- a/cookies.html
+++ b/cookies.html
@@ -144,7 +144,7 @@
     </div>
   </footer>
 
-  <script src="assets/site-config.js"></script>
+  <script src="assets/site-config.js" defer></script>
   <script src="assets/main.js" defer></script>
 </body>
 </html>
