--- a/services.html
+++ b/services.html
@@ -132,7 +132,7 @@
     </div>
   </footer>
 
-  <script src="assets/site-config.js"></script>
+  <script src="assets/site-config.js" defer></script>
   <script src="assets/main.js" defer></script>
 </body>
 </html>
